# jira-stateless-runner

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  healthcheck.yml  poll-dispatch.yml  stale-scan.yml
docs/: DayToDay.md  DeveloperGuide.md  ExtendedPendingRules.md  ExternalRunner.md  ImplementationRoadmap.md  ImplementationTestMatrix.md  JiraImplementation.md  JiraProvisioningGuide.md  LivingRequirements.md  ManualConfig.md
runner/: __init__.py  __main__.py  audit.py  cli.py  config.py  health.py  idempotency.py  ingestor.py  jira_client.py  logging_ext.py  models.py  rules.py  state_machine.py  watermark.py
scripts/: _cleanup_duplicate_fields.py  provision_jira.py
tests/: conftest.py  test_cli.py  test_config.py  test_health.py  test_idempotency.py  test_jira_client.py  test_logging.py  test_models.py  test_provisioner.py  test_rules.py  test_state_machine.py  test_watermark.py
