[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-stateless-runner"
version = "0.1.0"
description = "Stateless Jira state-machine runner — polls changelog events and dispatches T1–T13 transitions per a declarative rules table."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abhishek Kumar Verma" }]
keywords = ["jira", "automation", "state-machine", "github-actions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Bug Tracking",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "tenacity>=8.2,<10.0",
    "pydantic>=2.5,<3.0",
    "python-dateutil>=2.9,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-httpx>=0.30,<1.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "pre-commit>=3.7,<5.0",
    "types-python-dateutil",
]

[tool.hatch.build.targets.wheel]
packages = ["runner"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["docs"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "N",    # pep8-naming
    "RUF",  # ruff-specific rules
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802"]  # test function names may use non-snake_case for matrix row ids

[tool.mypy]
python_version = "3.11"
strict = true
files = ["runner", "tests"]
exclude = ["docs"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: marks tests that exercise a mocked Jira HTTP surface",
]
